--- a/user.html
+++ b/user.html
@@ -132,6 +132,19 @@
             </div>
         </div>
     </div>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('../worker.js')
+                    .then(registration => {
+                        // registration successfull
+                        // console.log('Service Worker registered with scope:', registration.scope);
+                    }).catch(error => {
+                        console.log('Service Worker registration failed:', error);
+                    });
+            });
+        }
+    </script>
     <script src="./js/global.js"></script>
     <script src="./js/user.js"></script>
 </body>
